Bug fixing - Client name and lobby name could not contain white spaces.

--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -40,7 +40,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>server.main.Server</mainClass>
+                                    <mainClass>main.Main</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
